# imdb-sentiment

./: .gitignore  Dockerfile  README.md  mkdocs.yml  openapi.json  pyproject.toml
docs/: index.md
docs/reference/: main.md
notebook/: 01 Data Analysis.ipynb  02 Classical Models.ipynb  03 Deep Models.ipynb
site/: 404.html  index.html  objects.inv
site/reference/main/: index.html
site/search/: search_index.json
src/apps/: main.py  model_utils.py
src/tests/: test_live_api.py  test_main.py  test_model_utils.py
